--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
+    "concurrently": "^6.3.0",
     "json-server": "^0.16.3",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
@@ -13,9 +14,10 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "server": "json-server -w todos.json -p 5000 -d 1000"
+    "dev:client": "react-scripts start",
+    "dev:server": "json-server -w todos.json -p 5000 -d 1000",
+    "prod:build": "react-scripts build",
+    "start": "concurrently \"yarn dev:server\" \"yarn dev:client\""
   },
   "eslintConfig": {
     "extends": [
